--- a/LookARound/Storyboards/Base.lproj/Main.storyboard
+++ b/LookARound/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A278a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Round View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <arskView key="view" contentMode="scaleToFill" id="EO5-fy-WZq">
+                <viewController storyboardIdentifier="ARoundViewController" id="BV1-FR-VrT" customClass="ARoundViewController" customModule="LookARound" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mb1-1B-bIi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </arskView>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="71t-iE-43l">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </arscnView>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UHX-6d-4P4">
+                                <rect key="frame" x="275" y="20" width="80" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="NM4-r7-sN2"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="peq-cZ-YPM"/>
+                                </constraints>
+                                <inset key="titleEdgeInsets" minX="10" minY="4" maxX="10" maxY="4"/>
+                                <state key="normal" title="Friends"/>
+                                <connections>
+                                    <action selector="onFriendsButton:" destination="BV1-FR-VrT" eventType="touchUpInside" id="JFk-30-dVJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="71t-iE-43l" secondAttribute="bottom" id="NfP-OC-4c5"/>
+                            <constraint firstItem="71t-iE-43l" firstAttribute="top" secondItem="mb1-1B-bIi" secondAttribute="top" id="Wwf-vS-m1X"/>
+                            <constraint firstItem="71t-iE-43l" firstAttribute="trailing" secondItem="mb1-1B-bIi" secondAttribute="trailing" id="dwJ-uu-IiL"/>
+                            <constraint firstItem="UHX-6d-4P4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="mb1-1B-bIi" secondAttribute="leading" constant="12" id="hNw-m1-U4W"/>
+                            <constraint firstItem="UHX-6d-4P4" firstAttribute="top" secondItem="mb1-1B-bIi" secondAttribute="top" constant="20" id="kGE-jk-mrV"/>
+                            <constraint firstItem="UHX-6d-4P4" firstAttribute="trailing" secondItem="mb1-1B-bIi" secondAttribute="trailing" constant="-20" id="n8J-BT-iFG"/>
+                            <constraint firstItem="71t-iE-43l" firstAttribute="leading" secondItem="mb1-1B-bIi" secondAttribute="leading" id="s0t-i3-yIN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="P3l-nB-hn5"/>
+                    </view>
                     <connections>
-                        <outlet property="sceneView" destination="EO5-fy-WZq" id="YuC-8q-ovz"/>
+                        <outlet property="friendsButton" destination="UHX-6d-4P4" id="eBC-mo-nnq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="124.58770614692655"/>
         </scene>
     </scenes>
 </document>
