--- a/LookARound/Storyboards/Filter.storyboard
+++ b/LookARound/Storyboards/Filter.storyboard
@@ -53,7 +53,18 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="BYx-ib-gBQ"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Filters" id="zXx-N1-Krw"/>
+                    <navigationItem key="navigationItem" title="Filters" id="zXx-N1-Krw">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="jYS-E7-ED9">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ePi-ab-LTi">
+                                <rect key="frame" x="16" y="7" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="onCancel:" destination="yTT-a3-4EU" eventType="touchUpInside" id="JIU-99-bmU"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="filterTableView" destination="GYc-lh-OAT" id="Vwn-x2-HqY"/>
                     </connections>
