--- a/LookARound/Storyboards/Login.storyboard
+++ b/LookARound/Storyboards/Login.storyboard
@@ -76,7 +76,13 @@
                         <color key="backgroundColor" red="1" green="0.83143336079999997" blue="0.052477605949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="cvB-un-BWB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Log In" id="d84-Gv-vTH"/>
+                    <navigationItem key="navigationItem" title="Log In" id="d84-Gv-vTH">
+                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="lkb-1s-SOu">
+                            <connections>
+                                <action selector="onBackButton:" destination="kcj-Dp-m2g" id="DYO-6x-gmb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="nameLabel" destination="PKA-En-ouI" id="69L-ni-7Pl"/>
                         <outlet property="placeContextLabel" destination="Lii-mY-qu7" id="iUu-n2-rHg"/>
