--- a/LookARound/Storyboards/Login.storyboard
+++ b/LookARound/Storyboards/Login.storyboard
@@ -96,10 +96,10 @@
             </objects>
             <point key="canvasLocation" x="431.19999999999999" y="169.56521739130437"/>
         </scene>
-        <!--SearchResultsViewController-->
+        <!--Results-->
         <scene sceneID="zYh-Lr-OpQ">
             <objects>
-                <viewController storyboardIdentifier="SearchResultsController" title="SearchResultsViewController" id="07i-Mr-a1S" customClass="SearchResultsViewController" customModule="LookARound" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchResultsController" title="Results" id="07i-Mr-a1S" customClass="SearchResultsViewController" customModule="LookARound" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rWc-o0-6fd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
