Add pins for MapKit map

--- a/LookARound/Views/MapView.xib
+++ b/LookARound/Views/MapView.xib
@@ -23,7 +23,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yxc-ef-SPk">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="404"/>
                     <subviews>
-                        <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="zSL-vv-552">
+                        <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zSL-vv-552">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="404"/>
                         </mapView>
                     </subviews>
